# python_emailer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.yml
src/python_emailer/: create_encrypted_emailer.py  create_encrypted_twilio.py  emailer.py  init_emailer_encryption.py
